--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,59 @@
+@import url('https://fonts.googleapis.com/css2?family=Karla:wght@400;700&family=Poppins:wght@400;700&display=swap');
+
+body {
+  margin:0;
+  padding: 0;
+  font-family: "Poppins", sans-serif;
+}
+a {
+  text-decoration: none;
+  color: black;
+}
+
 .App {
+  display: flex;
+}
+
+.app-header {
+  width:100%;
+  padding: 1em;
+  background-color: rgb(137, 24, 141);
+  color: white;
+  text-align: center;
+}
+.main{
+  display: flex;
+  padding: 1em;
+}
+
+.board_container {
+  width: 100%;
+  display: grid;
+  gap: .1em;
+  grid-template-columns: repeat(3, 1fr);
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.card {
+  background-color: aqua;
+}
+.card_img {
+  aspect-ratio: 1/1;
+  object-fit: cover;
+  max-width: 100%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+footer {
+  text-align: center;
+
+}
+
+@media(max-width: 400px) {
+  .main {
+    margin-inline: auto;
+    width: 60vw;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+  .app-header{
+    padding: .1em;
   }
 }
