--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,87 @@
 @import url('https://fonts.googleapis.com/css2?family=Karla:wght@400;700&family=Poppins:wght@400;700&display=swap');
 
-body {
-  margin:0;
-  padding: 0;
-  font-family: "Poppins", sans-serif;
+/* Box sizing rules */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
+
+
+/* Remove default margin */
+body,
+h1,
+h2,
+h3,
+h4,
+p,
+figure,
+blockquote,
+dl,
+dd {
+  margin: 0;
+}
+
+/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
+ul[role='list'],
+ol[role='list'] {
+  list-style: none;
+}
+
+/* Set core root defaults */
+html:focus-within {
+  scroll-behavior: smooth;
+}
+
+/* Set core body defaults */
+body {
+  min-height: 100vh;
+  text-rendering: optimizeSpeed;
+  line-height: 1.5;
+}
+
+/* A elements that don't have a class get default styles */
+a:not([class]) {
+  text-decoration-skip-ink: auto;
+}
+
+/* Make images easier to work with */
+img,
+picture {
+  max-width: 100%;
+  display: block;
+}
+
+/* Inherit fonts for inputs and buttons */
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+
+/* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
+@media (prefers-reduced-motion: reduce) {
+  html:focus-within {
+   scroll-behavior: auto;
+  }
+  
+  *,
+  *::before,
+  *::after {
+    animation-duration: 0.01ms !important;
+    animation-iteration-count: 1 !important;
+    transition-duration: 0.01ms !important;
+    scroll-behavior: auto !important;
+  }
+}
+
+html, body {
+    font-family: 'Poppins', sans-serif;
+    margin: 0;
+    padding: 0;
+}
+
 a {
   text-decoration: none;
   color: black;
@@ -12,6 +89,7 @@ a {
 
 .App {
   display: flex;
+  height: 100vh;
 }
 
 .app-header {
@@ -24,36 +102,52 @@ a {
 .main{
   display: flex;
   padding: 1em;
+  max-width: 60vw;
+  margin-inline: auto;
+  max-height: 90vh;
 }
 
 .board_container {
   width: 100%;
+  max-height: 50%;
   display: grid;
-  gap: .1em;
-  grid-template-columns: repeat(3, 1fr);
+  gap: 1em;
+  grid-template-columns: repeat(4, 1fr);
   text-align: center;
 }
 
 .card {
-  background-color: aqua;
+  background-color: purple;
+  border-radius: 5px;
+  
 }
 .card_img {
   aspect-ratio: 1/1;
   object-fit: cover;
-  max-width: 100%;
+ 
+  border-radius: 10px;
 }
+
+.covered {
+  visibility: hidden;
+}
+
 
 footer {
   text-align: center;
 
 }
 
-@media(max-width: 400px) {
+@media(max-width: 900px) {
   .main {
     margin-inline: auto;
-    width: 60vw;
+    max-width: 90%;
   }
   .app-header{
     padding: .1em;
+  }
+  .board_container {
+    grid-template-columns: repeat(3, 1fr);
+
   }
 }
