--- a/src/App.css
+++ b/src/App.css
@@ -50,6 +50,8 @@ img,
 picture {
   max-width: 100%;
   display: block;
+  overflow-clip-margin: content-box;
+  overflow: clip;
 }
 
 /* Inherit fonts for inputs and buttons */
@@ -104,7 +106,6 @@ a {
   padding: 1em;
   max-width: 60vw;
   margin-inline: auto;
-  max-height: 90vh;
 }
 
 .board_container {
@@ -117,6 +118,7 @@ a {
 }
 
 .card {
+  display: flex;
   background-color: purple;
   border-radius: 5px;
   
@@ -124,7 +126,8 @@ a {
 .card_img {
   aspect-ratio: 1/1;
   object-fit: cover;
- 
+  width: 100%;
+  height: 100%;
   border-radius: 10px;
 }
 
