--- a/src/App.css
+++ b/src/App.css
@@ -105,13 +105,13 @@ a {
   display: flex;
   flex-direction: column;
   text-align: center;
-  padding: 1em;
-  max-width: 60vw;
+  padding-top: 1em;
   margin-inline: auto;
+  width: 70vw;
 }
 
 .board_container {
-  width: 100%;
+  margin-inline: auto;
   max-height: 50%;
   display: grid;
   gap: 1em;
@@ -143,23 +143,25 @@ a {
 
 footer {
   text-align: center;
+  margin-top:1em;
 
 }
 
 @media(max-width: 900px) {
   .main {
     margin-inline: auto;
-    max-width: 90%;
   }
   .app-header{
     padding: .3em;
   }
   .board_container {
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(3, minmax(1em, 6em));
+    gap: 0.5em;
+
   }
 
   .card {
-    width: 6em;
-    height: 6em;
+    max-width: 6em;
+    max-height: 6em;
   }
 }
