--- a/src/App.css
+++ b/src/App.css
@@ -89,8 +89,7 @@ a {
   color: black;
 }
 
-.App {
-  display: flex;
+.app {
   height: 100vh;
 }
 
@@ -109,16 +108,15 @@ a {
   padding-top: 1em;
   margin-inline: auto;
   width: 70vw;
-  height: 70vh;
 }
 
 .board_container {
   margin-inline: auto;
-  max-height: 50%;
   display: grid;
   gap: 1em;
   grid-template-columns: repeat(4, 1fr);
   text-align: center;
+  max-height: 100%;
 }
 
 .card {
