--- a/src/App.css
+++ b/src/App.css
@@ -121,7 +121,7 @@ a {
 
 .card {
   width:100%;
-  height: 100%; 
+  max-height: 12em; 
   display: flex;
   background-color: purple;
   border-radius: 5px;
