--- a/src/App.css
+++ b/src/App.css
@@ -109,7 +109,7 @@ a {
   margin-inline: auto;
   width: 70vw;
   /* if you change this whink about Safari which doesnt know how to calculate height of cards components */
-  max-height: 70wh;
+  max-height: 70vh;
 }
 
 .board_container {
