--- a/src/App.css
+++ b/src/App.css
@@ -158,8 +158,8 @@ footer {
   }
   .board_container {
     grid-template-columns: repeat(3, minmax(1em, 6em));
+    grid-template-rows: minmax(1em, 6em);
     gap: 0.5em;
-    
     }
 
   .card {
